--- a/.openshift/nginx.conf.erb
+++ b/.openshift/nginx.conf.erb
@@ -1,7 +1,9 @@
 # pass the PHP scripts to PHP-FPM
-location ~ \.php$ {
+server {
+ location ~ \.php$ {
     fastcgi_pass unix:<%= ENV['OPENSHIFT_PHP_SOCKET'] %>;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param PATH_INFO $fastcgi_script_name;
     include <%= ENV['OPENSHIFT_NGINX_DIR'] %>/usr/nginx-<%= ENV['OPENSHIFT_NGINX_VERSION'] %>/conf/fastcgi_params;
+ }
 }
