--- a/.openshift/nginx.conf.erb
+++ b/.openshift/nginx.conf.erb
@@ -1,9 +1,44 @@
-# pass the PHP scripts to PHP-FPM
-#server {
-# location ~ \.php$ {
-#    fastcgi_pass unix:<%= ENV['OPENSHIFT_PHP_SOCKET'] %>;
-#    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-#    fastcgi_param PATH_INFO $fastcgi_script_name;
-#    include <%= ENV['OPENSHIFT_NGINX_DIR'] %>/usr/nginx-<%= ENV['OPENSHIFT_NGINX_VERSION'] %>/conf/fastcgi_params;
-# }
-#}
+# Enable Gzip
+gzip  on;
+gzip_http_version 1.0;
+gzip_comp_level 2;
+gzip_min_length 1100;
+gzip_buffers     4 8k;
+gzip_proxied any;
+gzip_types
+  # text/html is always compressed by HttpGzipModule
+  text/css
+  text/javascript
+  text/xml
+  text/plain
+  text/x-component
+  application/javascript
+  application/json
+  application/xml
+  application/rss+xml
+  font/truetype
+  font/opentype
+  application/vnd.ms-fontobject
+  image/svg+xml;
+
+gzip_static on;
+gzip_proxied        expired no-cache no-store private auth;
+gzip_disable        "MSIE [1-6]\.";
+gzip_vary           on;
+
+server {
+    listen  <%= ENV['OPENSHIFT_NGINX_IP'] %>:<%= ENV['OPENSHIFT_NGINX_PORT'] %>;
+    root    <%= ENV['OPENSHIFT_REPO_DIR'] %>/public;
+
+    location / {
+        index  index.html index.htm;
+    }
+
+    # pass the PHP scripts to PHP-FPM
+    location ~ \.php$ {
+        fastcgi_pass unix:/var/lib/openshift/56a0185b89f5cf3eb2000057/php//socket/php-56a0185b89f5cf3eb2000057.socket;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_script_name;
+        include /var/lib/openshift/56a0185b89f5cf3eb2000057/nginx//usr/nginx-1.9.9/conf/fastcgi_params;
+    }
+}
