--- a/.openshift/nginx.conf.erb
+++ b/.openshift/nginx.conf.erb
@@ -36,9 +36,9 @@ server {
 
     # pass the PHP scripts to PHP-FPM
     location ~ \.php$ {
-        fastcgi_pass unix:/var/lib/openshift/56a0185b89f5cf3eb2000057/php//socket/php-56a0185b89f5cf3eb2000057.socket;
+        fastcgi_pass unix:<%= ENV['OPENSHIFT_PHP_SOCKET'] %>;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_script_name;
-        include /var/lib/openshift/56a0185b89f5cf3eb2000057/nginx//usr/nginx-1.9.9/conf/fastcgi_params;
+        include <%= ENV['OPENSHIFT_NGINX_DIR'] %>/usr/nginx-<%= ENV['OPENSHIFT_NGINX_VERSION'] %>/conf/fastcgi_params;
     }
 }
