--- a/.openshift/fpm/php-fpm.conf.erb
+++ b/.openshift/fpm/php-fpm.conf.erb
@@ -568,3 +568,6 @@ env[OPENSHIFT_GEAR_UUID] = $OPENSHIFT_GEAR_UUID
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+
+extension_dir = "<%= ENV['OPENSHIFT_PHP_EXTENSION_DIR'] %>"
+extension = mongodb.so
