--- a/.openshift/fpm/php-ini.erb
+++ b/.openshift/fpm/php-ini.erb
@@ -896,6 +896,7 @@ default_socket_timeout = 60
 ;extension=php_tidy.dll
 ;extension=php_xmlrpc.dll
 ;extension=php_xsl.dll
+extension = mongodb.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
