hook and conf improvements

--- a/.openshift/cli/php-ini.erb
+++ b/.openshift/cli/php-ini.erb
@@ -897,6 +897,8 @@ default_socket_timeout = 60
 ;extension=php_xmlrpc.dll
 ;extension=php_xsl.dll
 
+extension = mongodb.so
+
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
 ;;;;;;;;;;;;;;;;;;;
