--- a/.openshift/fpm/php-fpm.conf.erb
+++ b/.openshift/fpm/php-fpm.conf.erb
@@ -518,6 +518,8 @@ env[OPENSHIFT_TMP_DIR]  = $OPENSHIFT_TMP_DIR
 env[OPENSHIFT_LOG_DIR]  = $OPENSHIFT_LOG_DIR
 
 # Database Environment Variables
+env[DB_DRIVER] = $DB_DRIVER
+
 env[OPENSHIFT_MYSQL_DB_HOST]  = $OPENSHIFT_MYSQL_DB_HOST
 env[OPENSHIFT_MYSQL_DB_PORT]  = $OPENSHIFT_MYSQL_DB_PORT
 env[OPENSHIFT_MYSQL_DB_SOCKET] = $OPENSHIFT_MYSQL_DB_SOCKET
@@ -532,6 +534,12 @@ env[OPENSHIFT_MONGODB_DB_URL]    = $OPENSHIFT_MONGODB_DB_URL
 env[OPENSHIFT_MONGODB_DB_USERNAME] = $OPENSHIFT_MONGODB_DB_USERNAME
 env[OPENSHIFT_MONGODB_DB_PASSWORD] = $OPENSHIFT_MONGODB_DB_PASSWORD
 
+env[OPENSHIFT_MONGODB_DIR] = $OPENSHIFT_MONGODB_DIR
+env[OPENSHIFT_MONGODB_IDENT] = $OPENSHIFT_MONGODB_IDENT
+env[OPENSHIFT_MONGODB_IP] = $OPENSHIFT_MONGODB_IP
+env[OPENSHIFT_MONGODB_PORT] = $OPENSHIFT_MONGODB_PORT
+env[MONGODB_URL] = $MONGODB_URL
+
 env[OPENSHIFT_POSTGRESQL_DB_HOST]   = $OPENSHIFT_POSTGRESQL_DB_HOST
 env[OPENSHIFT_POSTGRESQL_DB_PORT]   = $OPENSHIFT_POSTGRESQL_DB_PORT
 env[OPENSHIFT_POSTGRESQL_DB_SOCKET] = $OPENSHIFT_POSTGRESQL_DB_SOCKET
@@ -540,7 +548,7 @@ env[OPENSHIFT_POSTGRESQL_DB_USERNAME] = $OPENSHIFT_POSTGRESQL_DB_USERNAME
 env[OPENSHIFT_POSTGRESQL_DB_PASSWORD] = $OPENSHIFT_POSTGRESQL_DB_PASSWORD
 
 # Gear Environment Variables
-env[OPENSHIFT_GEAR_DNS]  = OPENSHIFT_GEAR_DNS
+env[OPENSHIFT_GEAR_DNS]  = $OPENSHIFT_GEAR_DNS
 env[OPENSHIFT_GEAR_NAME] = $OPENSHIFT_GEAR_NAME
 env[OPENSHIFT_GEAR_UUID] = $OPENSHIFT_GEAR_UUID
 
