updated DB driver env variable in php-fpm conf

--- a/.openshift/fpm/php-fpm.conf.erb
+++ b/.openshift/fpm/php-fpm.conf.erb
@@ -518,7 +518,7 @@ env[OPENSHIFT_TMP_DIR]  = $OPENSHIFT_TMP_DIR
 env[OPENSHIFT_LOG_DIR]  = $OPENSHIFT_LOG_DIR
 
 # Database Environment Variables
-env[DB_DRIVER] = $DB_DRIVER
+env[DB_CONNECTION] = $DB_CONNECTION
 
 env[OPENSHIFT_MYSQL_DB_HOST]  = $OPENSHIFT_MYSQL_DB_HOST
 env[OPENSHIFT_MYSQL_DB_PORT]  = $OPENSHIFT_MYSQL_DB_PORT
