--- a/.openshift/nginx.conf.erb
+++ b/.openshift/nginx.conf.erb
@@ -31,6 +31,7 @@ server {
     root    <%= ENV['OPENSHIFT_REPO_DIR'] %>/public;
 
     location / {
+        add_header 'Access-Control-Allow-Origin' '*';
         index  index.html index.htm index.php;
     }
 
