--- a/.openshift/nginx.conf.erb
+++ b/.openshift/nginx.conf.erb
@@ -38,6 +38,7 @@ server {
     
     location / {
         index  index.html index.htm index.php;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     # pass the PHP scripts to PHP-FPM
